[Fix]Change directory layout

--- a/app/react-app/src/pages/login_screen/App.css
+++ b/app/react-app/src/pages/login_screen/App.css
@@ -5,7 +5,9 @@
   height: 100vh;
   background-color: #f0f2f5;
 }
-
+.input-error {
+  border: 2px solid red;
+}
 .login-page {
   display: flex;
   flex-direction: column;
